@@ -1,5 +1,11 @@
 1999-11-20  Havoc Pennington  <hp@pobox.com>
 
+	* wrappers/gtk/gconf-client.c
+	(gconf_client_create_reverse_change_set): new function
+	(gconf_client_commit_change_set): new function
+
+1999-11-20  Havoc Pennington  <hp@pobox.com>
+
 	* gconf/gconf-changeset.c (gconf_create_reverse_change_set): New
 	function creates a change set which will revert another change set
 	on commit.
